fix tag white-space: nowrap #31

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -426,7 +426,7 @@ body {
 @media (min-width: 768px) {
 
   .social__list {
-    margin-top: 5rem; 
+    margin-top: 3.9rem; 
   }
 
   .social__list__item {
@@ -469,7 +469,7 @@ body {
   height: 24px;
   vertical-align: middle;
   color: rgba(255, 255, 255, 0.8);
-  word-break: nowrap;
+  white-space: nowrap;
   margin-right: 0.5rem;
   margin-left: 0.5rem;
   font-size: 0.8em;
